# alsa-driver_scarlett

./: .gitignore  .hgignore  .hgtags  README.scarlett.kernel.patch  s18i8-20140620-kernel.patch  s18i8-20140620.patch  scarlett.kernel.patch
alsa/: .gitignore  .hgignore  .hgtags  CARDS-STATUS  CHANGELOG  ChangeLog  FAQ  INSTALL  Makefile  Makefile.conf.in  Makefile.k  README  README.kernel  Rules.make  Rules1.make  SUPPORTED_KERNELS  TODO  WARNING  acinclude.m4  cards.config  cards.config.in  configure  configure.in  cvscompile  gitcompile  kconfig-vers  make-alsa-kernel  modules.config  snddevices  snddevices.in  version
alsa/acore/: Kconfig  Makefile  control.c  control.patch  device.c  hpetimer.c  hrtimer.c  hrtimer.patch  hwdep.c  hwdep.patch  info.c  info.c.rej  info.inc  info.patch  info_oss.c  info_oss.inc  info_oss.patch  init.c  init.patch  ioctl32.c  isadma.c  jack.c  memalloc.c  memalloc.inc  memalloc.inc1  memalloc.patch  memory.c  memory_debug.c  memory_wrapper.c  misc.c  misc.inc  misc.patch  misc_driver.c  pci_compat_22.c  pcm.c  pcm.patch  pcm_compat.c  pcm_ioctl32.c  pcm_lib.c  pcm_lib.patch  (+20 more)
alsa/acore/ioctl32/: Makefile  hwdep32.c  hwdep32_new.c  hwdep32_old.c  ioctl32.c  ioctl32_new.c  ioctl32_old.c  pcm32.c  pcm32_new.c  pcm32_old.c  rawmidi32.c  rawmidi32_new.c  rawmidi32_old.c  seq32.c  seq32_new.c  seq32_old.c  timer32.c  timer32_new.c  timer32_old.c
alsa/acore/oss/: Makefile  copy.c  io.c  linear.c  mixer_oss.c  mixer_oss.patch  mulaw.c  pcm_oss.c  pcm_oss.patch  pcm_plugin.c  rate.c  route.c
alsa/acore/seq/: CHANGES  Makefile  seq.c  seq.patch  seq_clientmgr.c  seq_clientmgr.patch  seq_device.c  seq_dtl.c  seq_dummy.c  seq_fifo.c  seq_info.c  seq_instr.c  seq_lock.c  seq_memory.c  seq_memory.patch  seq_midi.c  seq_midi_clock.c  seq_midi_emul.c  seq_midi_event.c  seq_mtc.c  seq_ports.c  seq_prioq.c  seq_queue.c  seq_sync.c  seq_system.c  seq_timer.c  seq_virmidi.c
alsa/aoa/: aoa.h
alsa/aoa/codecs/: onyx.c  snd-aoa-codec-onyx.c  snd-aoa-codec-tas.c  snd-aoa-codec-toonie.c  tas.c  toonie.c
alsa/aoa/core/: alsa.h  gpio-feature.c  snd-aoa-alsa.c  snd-aoa-core.c  snd-aoa-gpio-feature.c  snd-aoa-gpio-pmf.c
alsa/aoa/fabrics/: Makefile  layout.patch  snd-aoa-fabric-layout.c
alsa/aoa/soundbus/: Makefile  core.c  core.patch  soundbus.h  (+2 more)
alsa/arm/: Kconfig  Makefile  h3600-uda1341.c  h3600-uda1341.h  pxa2xx-ac97.c  pxa2xx-ac97.patch  pxa2xx-i2sound.c  pxa2xx-pcm.c  s3c24xx-iis.c  sa11xx-uda1341.c  sa11xx-uda1341.patch
alsa/doc/: CMIPCI.txt  ControlNames  MIXART.txt  Makefile  MixerNames  README.1st  SB-Live-mixer.txt  SOUNDCARDS  alsa.txt  azx.txt  coding-1.html  coding-2.html  coding-3.html  coding-4.html  coding-5.html  coding-6.html  coding-7.html  coding-8.html  coding-9.html  coding.html  coding.sgml  coding.txt  hda_codec.txt  pcm-mixing.txt  plan.txt
alsa/drivers/: Kconfig  Makefile  aloop-kernel.c  aloop.c  dummy.c  mtpav.c  mts64.c  mts64.patch  portman2x4-kernel.c  portman2x4.c  portman2x4.patch  serial-u16550.c  serialmidi.c  virmidi.c
alsa/firewire/: Makefile  amdtp.c  cmp.c  cmp.patch  isight.c  iso-resources.c  lib.c  scs1x.c  speakers.c
alsa/hal2/: hal2.c  hal2_lib.c
alsa/i2c/: Kconfig  Makefile  cs8427.c  i2c.c  tea6330t.c  uda1380.c
alsa/include/: Makefile  ac97_codec.h  ad1816a.h  ad1848.h  adriver.h  ainstr_fm.h  ainstr_gf1.h  ainstr_iw.h  ainstr_simple.h  ak4117.h  ak4531_codec.h  alsa-autoconf.h  alsa_bitrev.h  amagic.h  asequencer.h  asound.h  asound_fm.h  asoundef.h  asoundid.h  audiopci.h  autoconf-extra.h.in  bitmap_compat.h  burgundy.h  compat_22.h  compat_64.h  compat_cs.h  config.h  config.h.in  config1.h.in  control.h  cs4231.h  cs461x.h  cs46xx.h  cs8427.h  device_compat.h  driver.h  driver.h.1  emu10k1.h  emu10k1_synth.h  emu8000.h  (+106 more)
alsa/isa/: Kconfig  Makefile  adlib.c  als100.c  azt2320.c  cmi8328.c  cmi8330.c  dt0197h.c  dt019x.c  es18xx.c  opl3sa2.c  sc6000.c  sgalaxy.c  sscape.c
alsa/kbuild/: Makefile
alsa/mips/: au1x00.c
alsa/misc/: ac97_bus.c
alsa/parisc/: Kconfig  Makefile  harmony.c
alsa/pci/: Kconfig  Makefile  ad1889.c  ad1889.h  ad1889.patch  als300.c  als4000.c  asihpi.c  atiixp.c  atiixp.patch  atiixp_modem.c  atiixp_modem.patch  azt3328.c  azt3328.h  bt87x.c  bt87x.patch  cmipci.c  cmipci.patch  cs4281.c  cs4281.patch  cs5530.c  ens1370.c  ens1370.patch  ens1371.c  es1938.c  es1968.c  es1968.patch  fm801.c  fm801.patch  hdspm.c  ice1712.c  intel8x0.c  intel8x0.patch  intel8x0m.c  maestro3.c  maestro3.patch  pci_iomap_compat.c  rme32.c  rme96.c  sis7019.c  (+7 more)
alsa/pcmcia/: Config.help  Config.in  Makefile
alsa/ppc/: Makefile  awacs.c  awacs.patch  beep.c  beep.patch  beep_old.c  burgundy.c  daca.c  keywest.c  keywest_old.c  pmac.c  pmac.inc  pmac.inc1  pmac.patch  pmac_old.c  powermac.c  toonie.c  tumbler.c  tumbler.patch
alsa/sh/: aica.c
alsa/soc/: Makefile  soc-core.c  soc-core.patch  soc-dapm.c  soc-jack.c  soc-pcm.c
alsa/sparc/: Kconfig  Makefile  amd7930.c  cs4231.c  dbri.c
alsa/support/: Makefile  isapnp.c  isapnp.h  isapnp.txt  isapnp_new.c  isapnp_new.h  isapnp_new_proc.c  isapnp_proc.c  isapnp_quirks.c  isapnp_test.c
alsa/synth/: Makefile  util_mem.c
alsa/test/: Makefile  csp_load.c  csp_load.txt  mixer.c  mmap_test.c  ossdelay.c  osspcm.c  osspcm1.c  pcm.c
alsa/usb/: Kconfig  Makefile  card.patch  endpoint.patch  format.c  helper.patch  midi.patch  mixer.patch  pcm.c  quirks.patch  scarlettmixer.c  stream.patch  ua101.c  usbaudio.c  usbaudio.h  usbaudio.inc  usbaudio.inc1  usbaudio.patch  usbcompat.c  usbcompat.h  usbmidi.c  usbmidi.inc  usbmidi.inc1  usbmidi.patch  usbmixer.c  usbmixer.inc  usbmixer.patch  wrapper.h
alsa/utils/: Makefile  Modules.dep  alsa-compile.sh  alsa-driver.spec.in  alsa-info.sh  alsaconf  alsadriver.spec  alsadriver.spec.in  alsasound  alsasound.in  alsasound.posix  alsasound.posix.in  buildrpm  buildrpm.in  convert_isapnp_ids  export-symbols.c  insert  kmerge  kredirect.c  mod-deps.c  module-options  oss-move  patch-alsa  pnp  pnp1  remove  setup-alsa-kernel  snd-deps-find.c  snd-deps-output.c  snd-deps.c  snd-deps.h  update-deps
(+1274 files in other folders)
